# nclaw

./: .gitignore  .gitleaks.toml  .gitmodules  CONTRIBUTING.md  Cargo.toml  README.md  changelog.md  deny.toml  lefthook.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.cargo/: config.toml
.claude/tasks/: active.md
.github/: CONTRIBUTING_MODELS.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  gitleaks.toml
.github/wiki/: AI-Chat.md  Android-Build-Guide.md  Architecture-Deep-Dive.md  Architecture.md  Changelog.md  Contributing.md  DESKTOP.md  Desktop-Build-Guide.md  E2E-Encryption.md  Features.md  Getting-Started.md  Home.md  MOBILE.md  Memory.md  (+24 more)
app/: pubspec.yaml
backend/: .env.example  Makefile  README.md
core/: Cargo.toml  README.md  build.rs  cbindgen.toml  deny.toml  flutter_rust_bridge.yaml  libresume.rlib  llama-cpp-pin.txt
core/.cargo/: config.toml
core/.github/workflows/: sqlite-vec-matrix.yml
core/benches/: memory_search.rs  types_clone.rs  types_serde.rs
core/grammars/: json.gbnf  tool_call.gbnf
core/include/: libnclaw.h
core/migrations/: 0001_initial_schema.sql  0001_initial_schema.sqlite.sql  0002_indexes_v1.sql  0002_indexes_v1.sqlite.sql  0003_semantic_brain_tables.down.sql  0003_semantic_brain_tables.sql
core/registry/: README.md
core/scripts/: build-sqlite-vec.sh
core/src/: api.rs  backend.rs  config.rs  crypto.rs  device.rs  error.rs  lib.rs  logging.rs  mobile_ffi.rs  plugin.rs  protocol.rs  recovery.rs  registry.rs  runtime.rs  testing.rs  tier.rs  types.rs
core/src/benchmark/: mod.rs  phases.rs
core/src/bridge/: budget.rs  connection.rs  failure_policy.rs  mod.rs  orchestrator.rs  overrides.rs  privacy.rs  router.rs  rule.rs  telemetry.rs
core/src/bridge/router/: helpers.rs  mod.rs  types.rs
core/src/bridge/transport/: frontier.rs  local.rs  mod.rs  server_mux.rs
core/src/db/: backup.rs  dal.rs  encryption.rs  migrate.rs  mod.rs  schema.rs  scope.rs  telemetry.rs  vector.rs
core/src/db/desktop/: embedded_pg_engine.rs  mod.rs  pglite_engine.rs
core/src/db/mobile/: first_run.rs  mod.rs  sqlite_engine.rs
core/src/device/: linux.rs  macos.rs  mobile.rs  mod.rs  windows.rs
core/src/e2ee/: codec.rs  keys.rs  mod.rs  session.rs
core/src/llm/: compute_backend.rs  constraint.rs  context.rs  dampers.rs  downloader.rs  hf_search.rs  mod.rs  roles.rs  sampling.rs  stream.rs  telemetry.rs
core/src/llm/backend/: llamacpp.rs  mod.rs  ollama.rs
core/src/models/: cache.rs  mod.rs
core/src/models/downloader/: mod.rs  resume.rs
core/src/sync/: batching.rs  canonical.rs  client.rs  cursor.rs  heartbeat.rs  hlc.rs  idempotency.rs  lww.rs  mod.rs  network.rs  queue.rs  retry.rs  sign.rs  snapshot.rs  telemetry.rs  upgrade.rs
core/src/testing/: mod.rs  plugins.rs  sync.rs  vault.rs
core/src/tier/: helpers.rs  mod.rs
core/src/vault/: envelope.rs  keychain.rs  keypair.rs  mod.rs
core/tests/: argon2id_kat.rs  backup_smoke.rs  bc_compat.rs  benchmark_smoke.rs  benchmark_tests.rs  bridge_acceptance.rs  bridge_orchestrator_test.rs  bridge_router_test.rs  bridge_transport_test.rs  cache_lru.rs  canonical_tests.rs  context_tests.rs  context_truncation.rs  cross_lang_sign_test.rs  dal_smoke.rs  db_acceptance_test.rs  db_desktop_smoke.rs  db_mobile_smoke.rs  downloader_resume.rs  e2ee_integration.rs  integration_message_roundtrip.rs  json_mode_validity.rs  llm_acceptance_runner.rs  llm_downloader.rs  llm_hf_search.rs  llm_llamacpp_smoke.rs  llm_llamacpp_test.rs  llm_swap_vram.rs  migrate_smoke.rs  ollama_backend_smoke.rs  sign_tests.rs  streaming_cancel.rs  sync_acceptance.rs  sync_lww_test.rs  sync_network_auth_test.rs  sync_push_integration.rs  sync_retry_test.rs  sync_smoke.rs  sync_throttle.rs  testing_mocks_test.rs  (+3 more)
core/tests/fixtures/: cross_lang_sign_golden.json  push_golden.json
core/tests/fixtures/v1.1.0/: event_envelope.json
core/tests/llm_acceptance/: mod.rs
core/tests/llm_acceptance/fixtures/: baseline.yaml  code-completion.yaml  instruction-following.yaml  qa.yaml  summarize-long.yaml
desktop/: .gitignore  Package.swift  README.md  components.json  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/.cargo/: config.toml
desktop/src-tauri/src/: config.rs  downgrade_guard.rs  file_sync.rs  fs_proxy.rs  main.rs  menu.rs  notifications.rs  os_control.rs  screen_lock.rs  token_sync.rs  tray.rs  windows.rs
desktop/src-tauri/src/commands/: backend.rs  chat.rs  llm.rs  local_ai.rs  mod.rs  not_implemented_guard.rs  palette.rs  settings.rs  theme.rs  topics.rs  vault.rs
docs/: SIGNING.md  mobile-offline-sync.md
intelligence/: Makefile  go.mod  go.sum
legacy-flutter-desktop/: DEPRECATED.md  README.md
legacy-flutter-desktop/swift-daemon/tauri/: Cargo.toml  tauri.conf.json
legacy-flutter-desktop/swift-daemon/tauri/icons/: icon.icns
legacy-flutter-desktop/swift-daemon/tauri/src/: main.rs  pairing.rs  watcher.rs
legacy-flutter-desktop/swift-daemon/tauri/src-ui/: index.html
libs/libnclaw/: Cargo.toml
libs/libnclaw/src/vault/: mod.rs  registration.rs  revocation.rs  rotation.rs  sync.rs  telemetry.rs
libs/libnclaw/tests/: vault_acceptance.rs
mobile/: CHANGELOG_BETA.md  README.md  app.json  babel.config.js  eas.json  eslint.config.js  metro.config.js  package.json  pubspec.yaml  pubspec.yaml.tmp  tailwind.config.js  tsconfig.ci.json  tsconfig.json
mobile-flutter-archive/: DEPRECATED.md
proto/: agenttools.proto  knowledge.proto  memory.proto
protocol/: README.md  sync-protocol.md
scripts/: announce.sh  audit-log-sign.sh  build-android.sh  build-ios.sh  bundle-smoke.sh  crates-io-publish.sh  desktop-installers.sh  docker-build-push.sh  generate-update-feeds.sh  homebrew-sync.sh  mobile-publish.sh  npm-publish.sh  ping-api-redeploy.sh  prod-tag.sh  release-cascade.sh  release-gate.sh  release-mobile.sh  release-runbook.md  sdk-publish.sh  soak-48h.sh  staging-smoke.sh  tauri-updater-push.sh  vercel-verify.sh  version-bump-cascade.sh  wiki-sync.sh
(+873 files in other folders)
