[workspace]
resolver = "2"
members = [
    "core",
    "desktop/src-tauri",
]

# legacy-flutter-desktop/ intentionally excluded — frozen reference, removed in v1.2.0.
# protocol/ added as a workspace member once IDL crates land (subsequent S12 tickets).

[workspace.package]
version = "1.1.2"
edition = "2021"
license = "MIT"
authors = ["nSelf <hello@nself.org>"]
repository = "https://github.com/nself-org/nclaw"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
