[workspace]
resolver = "2"
members = [
    "core",
    "desktop/src-tauri",
]

# legacy-flutter-desktop/ intentionally excluded — frozen reference, removed in v1.2.0.
# protocol/ added as a workspace member once IDL crates land (subsequent S12 tickets).

[workspace.package]
version = "1.1.2"
edition = "2021"
license = "MIT"
authors = ["nSelf <hello@nself.org>"]
repository = "https://github.com/nself-org/nclaw"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1

# Static-library profile for the iOS C-ABI build of libnclaw.
# Inherits release optimisation but turns LTO off: under LTO the staticlib
# linker drops the `#[no_mangle] extern "C"` exports in core/src/mobile_ffi.rs
# (they are unreferenced inside Rust, the callers are Swift), which breaks the
# iOS link with "Undefined symbol: _nclaw_set_low_power".
# scripts/build-ios.sh builds with this profile.
[profile.mobile-static]
inherits = "release"
lto = false
