[package]
name = "libnclaw"
version = "0.1.0"
edition = "2021"
description = "Shared types, protocol, and E2E encryption for nClaw clients"
license = "MIT"

[lib]
crate-type = ["lib"]

[[bench]]
name = "types_serde"
harness = false

[[bench]]
name = "types_clone"
harness = false

[[bench]]
name = "memory_search"
harness = false

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# E2E encryption: X25519 key exchange + ChaCha20-Poly1305 AEAD
x25519-dalek = { version = "2", features = ["static_secrets"] }
chacha20poly1305 = { version = "0.10", features = ["stream"] }
rand_core = { version = "0.6", features = ["getrandom"] }
base64 = "0.22"
# Client vault: Ed25519 keypair + XChaCha20 envelope encryption + OS keychain
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
keyring = "3"
argon2 = "0.5"
thiserror = "1"
reqwest = { version = "0.12", features = ["stream", "json"] }
sha2 = "0.10"
futures = "0.3"
fs2 = "0.4"
rusqlite = { version = "0.31", optional = true, features = ["bundled"] }
async-stream = "0.3"
tokio-stream = "0.1"
libc = "0.2"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros"] }
tokio-util = { version = "0.7", features = ["slab", "rt"] }
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "json", "env-filter"] }
tracing-appender = "0.2"
figment = { version = "0.10", features = ["toml"] }
dirs = "5"
toml = "0.8"
flutter_rust_bridge = "2.5"
async-trait = "0.1"
llama-cpp-2 = { version = "0.1.146", optional = true }
# Desktop DB fallback: embedded Postgres subprocess (optional, feature-gated).
# NOTE: 0.18 is current as of 2026-05-13; pin tighter after S16.T01b integration.
postgresql_embedded = { version = "0.18", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
ts-rs = "10"
tauri-specta = "2.0.0-rc.25"
httpmock = "0.7"
tempfile = "3"

[features]
default = ["cpu"]
cpu = ["dep:llama-cpp-2"]
metal = ["dep:llama-cpp-2", "llama-cpp-2/metal"]
cuda = ["dep:llama-cpp-2", "llama-cpp-2/cuda"]
vulkan = ["dep:llama-cpp-2", "llama-cpp-2/vulkan"]
frb-export = []
ts-export = []
# Client vault: XChaCha20-Poly1305 envelope encryption (chacha20poly1305 is always-on; vault gates the Envelope API)
vault = []
# Desktop DB feature flags (Decision #4).
# pglite: Postgres-on-WASM via wasmtime. Surface only — WASM bundle integration in S16.T01b.
pglite = []
# embedded-pg: launches a real postgres binary subprocess as fallback when pglite lacks pgvector/ltree.
embedded-pg = ["dep:postgresql_embedded"]
# mobile-sqlite: SQLite + sqlite-vec extension for iOS/Android targets.
mobile-sqlite = ["dep:rusqlite"]

[[bin]]
name = "export-bindings"
path = "src/bin/export-bindings.rs"
required-features = ["ts-export"]
