[package]
name = "nclaw-desktop-tauri"
version = "0.1.0"
edition = "2021"
description = "ɳClaw Desktop — Tauri 2 shell"
license = "MIT"

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-window-state = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libnclaw = { path = "../../core" }

[build-dependencies]
tauri-build = { version = "2", features = [] }
