[package]
name = "nclaw-desktop-tauri"
version = "0.1.0"
edition = "2021"
description = "ɳClaw Desktop — Tauri 2 shell"
license = "MIT"

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-window-state = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-autostart = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
semver = "1"
libnclaw = { path = "../../core" }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }
