[package]
name = "libnclaw"
version = "0.1.0"
edition = "2021"
description = "Shared types, protocol, and E2E encryption for nClaw clients"
license = "MIT"

[lib]
crate-type = ["lib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# E2E encryption: X25519 key exchange + ChaCha20-Poly1305 AEAD
x25519-dalek = { version = "2", features = ["static_secrets"] }
chacha20poly1305 = "0.10"
rand_core = { version = "0.6", features = ["getrandom"] }
base64 = "0.22"
thiserror = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
