[package]
name = "nclaw-companion"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
notify = "6"
hostname = "0.4"

[build-dependencies]
tauri-build = "2"
